[package]
name = "kaspawallet"
description = "Kaspa wallet command-line client (gRPC frontend for kaspa-wallet-daemon)"
keywords = ["kaspa", "wallet", "cli"]
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
include.workspace = true

[[bin]]
name = "kaspawallet"
path = "src/main.rs"

[dependencies]
kaspa-addresses.workspace = true
kaspa-bip32.workspace = true
kaspa-consensus-core.workspace = true
kaspa-txscript.workspace = true
kaspa-wallet-daemon.workspace = true
kaspa-wallet-grpc-client.workspace = true
kaspa-wallet-grpc-core.workspace = true
argon2.workspace = true
chacha20poly1305.workspace = true
clap.workspace = true
dirs.workspace = true
hex.workspace = true
num_cpus.workspace = true
prost.workspace = true
rpassword.workspace = true
secp256k1.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
