[package]
name = "kaspa-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

[features]
default = []
profile = []

[dependencies]
async-channel.workspace = true
uuid.workspace = true
serde.workspace = true
borsh.workspace = true
itertools.workspace = true
cfg-if.workspace = true
dashmap.workspace = true
kaspa-utils-macros.workspace = true

triggered = "0.1"
event-listener = "2.5.3"

[dev-dependencies]
async-trait.workspace = true
futures-util.workspace = true
tokio = { workspace = true, features = ["rt", "time", "macros"] }
criterion.workspace = true
rand.workspace = true

[[bench]]
name = "bench"
harness = false
