[package]
name = "x-python"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
include.workspace = true

[lib]
name = "kaspapy"
crate-type = ["cdylib"]

[dependencies]
cfg-if.workspace = true
pyo3.workspace = true
kaspa-wallet-keys.workspace = true

[features]
default = []
py-sdk = [
    "kaspa-wallet-keys/py-sdk"
]
